# Music-Upsacler-and-Visualizer

./: .gitignore  README.md  main.py  musialize.py  pyproject.toml  requirements.txt  upscale.py  yt_grab.py
.github/: publish.yml
src/music_upscaler_and_visualizer/: cli.py  musialize.py  upscale.py  yt_grab.py
